manifest/objects/CPQU__Related_List_Field_Condition__c.object
<CustomObject>
    <fields>
        <fullName>CPQU__Field__c</fullName>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Status__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__PaymentTerms__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQU__Filter_Type__c</fullName>
        <label>Filter Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                    <isActive>false</isActive>
                    <label>Formula</label>
                </value>
                <value>
                    <fullName>Variable</fullName>
                    <isActive>false</isActive>
                    <label>Variable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQU__Filter_Value__c</fullName>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQU__Index__c</fullName>
        <label>Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQU__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQU__Related_List_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related List Field</label>
        <referenceTo>CPQU__Related_List_Field__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related List Field Condition</label>
    <nameField>
        <displayFormat>RLFC-{00000}</displayFormat>
        <label>Condition</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related List Field Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>